Closed
Bug 1410703
Opened 8 years ago
Closed 8 years ago
Port bug 1410518 - Change nsIRDFDataSource URI to ACString
Categories
(Thunderbird :: General, defect)
Thunderbird
General
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 58.0
People
(Reporter: jorgk-bmo, Assigned: jorgk-bmo)
Details
Attachments
(1 file, 1 obsolete file)
|
5.49 KB,
patch
|
aceman
:
review+
|
Details | Diff | Splinter Review |
mailnews/base/src/nsMsgFolderDataSource.h:44:14: error: 'GetURI' marked 'override' but does not override any member functions
| Assignee | ||
Comment 1•8 years ago
|
||
| Assignee | ||
Comment 2•8 years ago
|
||
Attachment #8920863 -
Attachment is obsolete: true
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/c2981c178f3e
Port bug 1410518 to mailnews: nsIRDFDataSource::GetURI() uses ACString now. rs=bustage-fix
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•8 years ago
|
Target Milestone: --- → Thunderbird 58.0
| Assignee | ||
Updated•8 years ago
|
Attachment #8920864 -
Flags: review?(acelists)
Comment on attachment 8920864 [details] [diff] [review]
1410703-nsIRDFDataSource.patch (v2)
Review of attachment 8920864 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks.
::: mailnews/base/src/nsMsgRDFDataSource.cpp
@@ +85,5 @@
> NS_INTERFACE_MAP_ENTRY_AMBIGUOUS(nsISupports, nsIRDFDataSource)
> NS_INTERFACE_MAP_ENTRIES_CYCLE_COLLECTION(nsMsgRDFDataSource)
> NS_INTERFACE_MAP_END
>
> /* readonly attribute string URI; */
Is this comment still valid? Didn't the attribute type change?
Attachment #8920864 -
Flags: review?(acelists) → review+
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/0af49b525fe7
Follow-up: Fix comment. rs=comment-only
| Assignee | ||
Comment 6•8 years ago
|
||
Damn, forgot the DONTBUILD :-(
You need to log in
before you can comment on or make changes to this bug.
Description
•