Bug 1410703 - Port bug 1410518 to mailnews: nsIRDFDataSource::GetURI() uses ACString now. rs=bustage-fix

--HG--
extra : amend_source : 04dc9496cd621c151e2ed65ededa39f5365b66af